--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
+    "appcenter": "5.0.1",
+    "appcenter-analytics": "5.0.1",
+    "appcenter-crashes": "5.0.1",
     "axios": "^1.7.2",
     "expo": "~51.0.4",
     "expo-font": "~12.0.5",
